<!--
  ~ Copyright 2022 Arseniy Graur
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Polyhoot!</string>
    <string name="play_button_text">Play</string>
    <string name="game_uid_text">Enter game ID</string>
    <string name="starting_game">Starting game!</string>
    <string name="join_game">Join game</string>
    <string name="answer_sent">Waiting for others…</string>
    <string name="time_up_text">Looking through the answers…</string>
    <string name="force_stop">Host has disconnected.\nGame has ended forcibly.</string>
    <string name="game_ended">Game has ended.</string>
    <string name="get_ready">Get ready to answer!</string>
    <string name="game_id">Game ID: %1$d</string>
    <string name="status">Status: %1$s</string>
    <string name="game_id_error_text">Check UID!</string>
    <string name="name_text">Enter your name</string>
    <string name="name_field_layout_hint">Name</string>
    <string name="game_id_field_hint">Game ID</string>
    <string name="name_field_empty">Can\'t be empty!</string>
    <string name="score_text">Score: %1$d</string>
    <string name="answer_right">Good job! Keep it up!</string>
    <string name="answer_wrong">Do better next time!</string>
    <string name="main_menu_button_text">Main menu</string>
    <string name="see_your_name">See your name on screen?</string>
</resources>