<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2022 Arseniy Graur
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.GameFragment"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:paddingBottom="100dp">

        <TextView
            android:id="@+id/game_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_your_name"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/go_back_button"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_button_text"
            android:stateListAnimator="@null"
            android:textSize="20sp"
            android:elevation="0dp"
            android:visibility="gone"
            app:icon="@drawable/ic_round_arrow_back"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_status_text" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/waiting_circle"
            style="@style/Widget.Material3.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:paddingTop="24dp"
            android:visibility="gone"
            app:indicatorSize="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_status_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/choices_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:visibility="gone">

            <TextView
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:textSize="32sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/answer_1"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/answer_1_card_background"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toTopOf="@id/answer_3"
                app:layout_constraintEnd_toStartOf="@id/answer_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_text">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="1"
                    android:textColor="@color/answer_1_card_text_color"
                    android:textSize="32sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/answer_2"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/answer_2_card_background"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toTopOf="@id/answer_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/answer_1"
                app:layout_constraintTop_toBottomOf="@id/question_text">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="2"
                    android:textColor="@color/answer_2_card_text_color"
                    android:textSize="32sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/answer_3"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="12dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/answer_3_card_background"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/answer_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/answer_1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="3"
                    android:textColor="@color/answer_3_card_text_color"
                    android:textSize="32sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/answer_4"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/answer_4_card_background"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/answer_3"
                app:layout_constraintTop_toBottomOf="@id/answer_2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="4"
                    android:textColor="@color/answer_4_card_text_color"
                    android:textSize="32sp" />

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/name_text"
            app:layout_constraintEnd_toStartOf="@id/game_id_text"
            app:layout_constraintStart_toEndOf="@id/name_text" />

        <TextView
            android:id="@+id/game_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="24dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/score_text"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>